# LogPose

./: .gitignore  README.md  pyproject.toml  requirements.txt
Assets/python-scripts/: backup_obsidian_config.py  generate_todolist.py  initialize_vault.py  update_index.py
Assets/vault-templates/: default_config.yaml
logpose/: __main__.py  initialize.py  kanban.py  todo.py  update.py
vault-templates/: default_config.yaml
