[project]
name = "logpose"
version = "0.1.0"
description = "A personal knowledge and project management toolkit for Obsidian"
authors = [{ name = "Dr. Vegapunk" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pyyaml>=6.0.2",
    "ruff>=0.12.5"
]

[project.scripts]
logpose = "logpose.__main__:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["logpose"]
